# eva-voice-assistant

./: .gitignore  README.md  json_parse.py  main.py  recognition.py  requirements.txt  response_filter.py  search_system_filter.py  synthesis.py  user_bot.py  weather.py
config/: config.py
installing/: Makefile  install_deps.bat  requirements.txt
json/: action.json  intents.json  speaking_suggestion.json  weather.json
res/: approximately_words  quotes.txt  user_bot_globals.py
train/: intents_training.py  main.py  weather_training.py
ui/: CMakeLists.txt  eva_cube.py  main.qml  ui_call.py
